[package]
name = "transarch-macro"
version = "0.1.0"
edition = "2021"
description = "Macros for transarch"
license = "MIT"
authors = ["buj"]
repository = "https://github.com/5GameMaker/transarch"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
